fe: user avatar: fix vertical alignment

--- a/frontend/app/_modules/tools/user-avatar/user-avatar.component.scss
+++ b/frontend/app/_modules/tools/user-avatar/user-avatar.component.scss
@@ -1,3 +1,9 @@
+:host {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .avatar-backdrop {
     aspect-ratio: 1 / 1;
     border-radius: 50%;
